--- a/src/components/GenreButtons/GenreButtons.css
+++ b/src/components/GenreButtons/GenreButtons.css
@@ -12,6 +12,7 @@
     border-radius: 5px;
     outline: none;
     border: none;
+    white-space: nowrap;
 }
 
 .GenreCardWrapperSection button:hover {
