--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .home-wrapper {
-    padding: 0 20px;
+    padding: 20px 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100vmax
+    align-items: center;
+    height: 100vh
 }
