--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     background: gray;
 }
@@ -9,12 +5,16 @@ body {
 .fg--search {
     background: white;
     position: relative;
-    width: 80%;
+    width: 90%;
+    border-radius: 10px;
 }
 
 .fg--search input {
     width: 100%;
     padding: 20px 60px 20px 20px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
     display: block;
 }
 
@@ -35,6 +35,7 @@ body {
     color: red;
 }
 
-.fa-search:before {
-    content: "\f002";
+.fa-search {
+    height: 30px;
+    margin-top: -5px;
 }
