--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,5 +3,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh
+    height: 100vh;
+}
+
+.home-wrapper h1 {
+    margin: 40px 0px;
+    align-self: flex-start;
+    font-family: Poppins-Bold;
 }
