--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -8,3 +8,18 @@
     background-attachment: fixed;
 }
 
+.detailGenreDiv {
+    display: flex;
+}
+
+.detailGenre {
+    font-weight: bolder;
+    margin-right: 2%;
+}
+
+.detailGenreDiv p:nth-of-type(3)::before,
+.detailGenreDiv p:nth-of-type(4)::before,
+.detailGenreDiv p:nth-of-type(5)::before,
+.detailGenreDiv p:nth-of-type(6)::before {
+    content: ", ";
+}
