--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -1,15 +1,73 @@
 .detailBackGroundContainer {
     /* background: linear-gradient(0deg, rgb(221, 214, 214), transparent); */
     width: 100%;
-    height: 80vh;
+    height: 61vh;
     background-repeat: no-repeat;
     /* background-size: 50% 70%; */
     /* background-size: contain; */
     background-attachment: fixed;
 }
 
+.detailPage {
+    padding-bottom: 30%;
+}
+
+.backArrow {
+    width: 90%;
+    display: flex;
+    color: white;
+    font-weight: bolder;
+    align-items: center;
+    /* justify-content: space-between; */
+    padding: 20px 0 0 0;
+    font-size: 1.5rem;
+    margin: 0 auto;
+}
+
+.backArrow button {
+    background-color: transparent;
+    border-style: none;
+    margin-right: 15%;
+}
+
+.detailName {
+    height: 61vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 5rem;
+}
+
+.detailName p {
+    font-size: 1.4em;
+}
+
+.detailHeadingRating {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.detailHeadingRating h2 {
+    text-align: center;
+    font-size: 2rem;
+}
+
+.detailReleaseRuntime {
+    display: flex;
+}
+
+.starRating {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 5%;
+}
+
 .detailGenreDiv {
     display: flex;
+    gap: 45px
 }
 
 .detailGenre {
@@ -17,9 +75,50 @@
     margin-right: 2%;
 }
 
-.detailGenreDiv p:nth-of-type(3)::before,
+.detailGenreGenresOutput{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.detailGenreP{
+    white-space: nowrap;
+
+}
+
+/* .detailGenreDiv p:nth-of-type(3)::before,
 .detailGenreDiv p:nth-of-type(4)::before,
 .detailGenreDiv p:nth-of-type(5)::before,
 .detailGenreDiv p:nth-of-type(6)::before {
     content: ", ";
+} */
+
+.detailOverviewDiv {
+    width: 90vw;
+    padding: 5% 0 10% 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.seeMore {
+    color: red;
+}
+
+.detailLanguageP {
+    font-weight: bolder;
+    margin-right: 2%;
+}
+
+.watchTrailer {
+    background-color: red;
+    border: transparent;
+    border-radius: 8px;
+    padding: 15px 30px;
+    margin: 0 auto;
+    color: white;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
