--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,9 @@
 .home-wrapper {
-    padding: 20px 20px;
+    padding: 20px 20px 80px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .home-wrapper h1 {
