--- a/src/components/GenreCard/GenreCard.css
+++ b/src/components/GenreCard/GenreCard.css
@@ -2,7 +2,7 @@
     display: flex;
     text-decoration: none;
     box-shadow: 1px 1px 5px white;
-    margin: 20px;
+    margin: 10px;
     border-radius: 10px;
     box-shadow: 1px 1px 6px gray;
     transition: shadow .5s linear;
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 2rem;
+    margin: 0 .5rem;
     width: 100%;
     color: #000000;
 }
