changed heading font size

--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -110,6 +110,10 @@
     gap: 10px;
 }
 
+.detailOverviewDiv h3 {
+    font-size: 1.5rem;
+}
+
 .seeMore {
     color: red;
     background-color: transparent;
