--- a/src/pages/SearchGenre/SearchGenre.css
+++ b/src/pages/SearchGenre/SearchGenre.css
@@ -4,3 +4,13 @@
     justify-content: center;
     padding-bottom: 80px;
 }
+
+.sortBtn {
+    padding: 10px 15px;
+    margin: 10px;
+    background-color: #FBF8FF;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    white-space: nowrap;
+}
