--- a/src/components/GenreCard/GenreCard.css
+++ b/src/components/GenreCard/GenreCard.css
@@ -3,7 +3,9 @@
     align-items: center;
     text-decoration: none;
     box-shadow: 1px 1px 5px white;
+    justify-content: space-between;
     margin: 10px;
+    padding-right: 10px;
     border-radius: 10px;
     box-shadow: 1px 1px 6px gray;
     transition: shadow .5s linear;
@@ -16,16 +18,18 @@
     margin: 10px;
     border-radius: 10px;
     transition: shadow .5s linear;
-    width: 85%;
+    width: 90%;
 
 }
 
 .genreCard-interactionButtons {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
     height: 100%;
+    width: 10%;
 }
 
 .genreCard-bookmark:hover {
@@ -98,5 +102,6 @@
 
 .genreCard-bookmark {
     width: 25px;
+
     height: 30px;
 }
