--- a/src/pages/StartPage/StartPage.css
+++ b/src/pages/StartPage/StartPage.css
@@ -14,7 +14,7 @@
     /* background-attachment: fixed; */
 }
 
-.start-page-buttom {
+.start-page-bottom {
     text-align: center;
     color: #1A1A1A;
     width: 100%;
@@ -32,7 +32,7 @@
     padding: 1rem 2rem;
 }
 
-.start-page-buttom h1 {
+.start-page-bottom h1 {
     margin-top: 1rem;
 }
 
@@ -43,4 +43,9 @@
     padding: 1rem 2rem;
     border-radius: 15px;
     box-shadow: 4px 4px 15px 2px rgba(0, 0, 0, 0.202);
+}
+
+.start-page-button:hover {
+
+    box-shadow: 4px 4px 20px 5px rgba(0, 0, 0, 0.202);
 }
